remove default bundle, create login bundle with entites

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
-app:
-    resource: "@AppBundle/Controller/"
+garlic_blog_login:
+    resource: "@GarlicBlogLoginBundle/Controller/"
     type:     annotation
+    prefix:   /
+
