--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+garlic_blog_app:
+    resource: "@GarlicBlogAppBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 garlic_blog_login:
     resource: "@GarlicBlogLoginBundle/Controller/"
     type:     annotation
