--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,3 +23,4 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+                default_target_path: /
