--- a/src/GarlicBlog/UserBundle/Resources/config/services.yml
+++ b/src/GarlicBlog/UserBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
 #    garlic_blog_login.example:
-#        class: GarlicBlog\LoginBundle\Example
+#        class: GarlicBlog\UserBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
