mapping basic tables from database to doctrine

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,9 +63,10 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
+            GarlicBlogAppBundle:
+                type: annotation
             GarlicBlogUserBundle:
                 type: annotation
-
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
