--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "twitter/bootstrap": "^3.3",
+        "components/jquery": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
