--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,8 +34,13 @@ security:
                 login_path: login
                 check_path: login
                 default_target_path: /
+            logout:
+                path: /logout
+                target: /
             
     access_control:
     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/, roles: ROLE_USER }
+    - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/myArticles, roles: ROLE_USER }
+    - { path: ^/myProfile, roles: ROLE_USER }
